--- a/index.html
+++ b/index.html
@@ -2,8 +2,20 @@
 <!DOCTYPE html>
 <html>
 	<head>
+		<meta charset = "utf-8">
+
+		<link href='https://fonts.googleapis.com/css?family=Chathura' rel='stylesheet' type='text/css'>
+		<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
+		
+		<link rel = "stylesheet" type = "text/css" href = "stylesheet.css">	
+		<link type="text/css" rel="stylesheet" href="https://unpkg.com/bootstrap/dist/css/bootstrap.min.css"/>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+		<link type="text/css" rel="stylesheet" href="https://unpkg.com/bootstrap-vue@latest/dist/bootstrap-vue.css"/>
 	</head>
 	
 	<body>
+		<h1>
+			Test
+		</h1>
 	</body>
 </html>
