--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 	
 	<body>
-		<nav class = "navbar navbar-dark bg-primary">
+		<nav class = "navbar navbar-expand-lg navbar-light bg-light">
 			<div class = "collapse navbar-collapse">
 				<ul class = "navbar-nav mr-auto">
 					<li class="nav-item active">
