Add banner to home page

--- a/index.html
+++ b/index.html
@@ -26,9 +26,20 @@
 				</ul>
 			</div>
 		</nav>
-		
-		<footer>
 
+		<div class = "row" id = "banner">
+			<div class = "image text-center">
+				<img src = "background.jpg" alt = "background image" class = "img-fluid">
+				<div class = "caption">
+					<h1>Zachary Zhao</h1>
+					<h5>Computer Science Undergrad at UCLA</h5>
+					<h5>San Diego | Los Angeles</h5>
+				</div>
+			</div>
+		</div>
+
+		<footer>
+			<p>Test</p>
 		</footer>
 
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
