Added material to footer

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 		<link rel = "stylesheet" type = "text/css" href = "stylesheet.css">	
 		
+		<script src="https://kit.fontawesome.com/046e45e705.js" crossorigin="anonymous"></script>
+
 		<title>kizuku.github.io</title>
 	</head>
 	
@@ -29,7 +31,7 @@
 
 		<div class = "row" id = "banner">
 			<div class = "image text-center">
-				<img src = "background.jpg" alt = "background image" class = "img-fluid">
+				<img src = "images/background.jpg" alt = "background image" class = "img-fluid">
 				<div class = "caption">
 					<h1>Zachary Zhao</h1>
 					<h5>Computer Science Undergrad at UCLA</h5>
@@ -39,7 +41,43 @@
 		</div>
 
 		<footer>
-			<p>Test</p>
+			<div class = "container">
+				<div class = "row">
+					<div class = "col-md">
+						<h5>Zachary Zhao</h5>
+						<p>developer | esports enthusiast </p>
+					</div>
+					<div class = "col-md">
+						<h5>Contact Me</h5>
+						<ul>
+							<li>
+								<a href = "Master Resume.pdf">
+									<i class = "far fa-file"></i>
+									Resume
+								</a> 
+							</li>
+							<li>
+								<a href = "https://github.com/kizuku">
+									<i class = "fab fa-github"></i>
+									Github
+								</a>
+							</li>
+							<li>
+								<a href = "mailto:zachary.m.zhao@gmail.com">
+									<i class = "far fa-envelope"></i>
+									Email
+								</a>
+							</li>
+							<li>
+								<a href = "https://twitter.com/Kizukulol">
+									<i class = "fab fa-twitter"></i>
+									Twitter
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
 		</footer>
 
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
