Added info about me to index.html

--- a/index.html
+++ b/index.html
@@ -35,9 +35,21 @@
 				<div class = "caption">
 					<h1>Zachary Zhao</h1>
 					<h5>Computer Science Undergrad at UCLA</h5>
+					<h5>Esports Athlete and Videogame Streamer</h5>
 					<h5>San Diego | Los Angeles</h5>
 				</div>
 			</div>
+		</div>
+
+		<div class = "content">
+			<h2>About Me</h2>
+			<p>
+				I'm currently pursuing a Bachelor's degree in Computer Science at UCLA. <br>
+				My interests include web development, robotics, esports, and gaming in general. <br>
+				I led FRC team 1758 in high school as programming captain in competitions across the southeast. <br>
+				I currently play on UCLA's League of Legends team under the name "Kizuku". <br>
+				I also like to play tennis, the violin, and the otamatone.
+			</p>
 		</div>
 
 		<footer>
