Added stream link to footer

--- a/index.html
+++ b/index.html
@@ -81,6 +81,12 @@
 								</a>
 							</li>
 							<li>
+								<a href = "https://twitch.tv/kizuku">
+									<i class = "fab fa-twitch"></i>
+									Stream
+								</a>
+							</li>
+							<li>
 								<a href = "https://twitter.com/Kizukulol">
 									<i class = "fab fa-twitter"></i>
 									Twitter
