--- a/projects.html
+++ b/projects.html
@@ -85,7 +85,13 @@
 									<i class = "far fa-envelope"></i>
 									Email
 								</a>
-							</li>
+                            </li>
+                            <li>
+                                <a href = "https://twitch.tv/kizuku">
+                                    <i class = "fab fa-twitch"></i>
+                                    Stream
+                                </a>
+                            </li>
 							<li>
 								<a href = "https://twitter.com/Kizukulol">
 									<i class = "fab fa-twitter"></i>
