--- a/projects.html
+++ b/projects.html
@@ -30,7 +30,7 @@
 		</nav>
 
 		<div class = "content-2">
-			<h2>My Projects</h2>
+			<h2>My Featured Projects</h2>
 			<div class = "row">
                 <div class = "col-md">
                     <div class = "project">
