Total website revamp

--- a/index.html
+++ b/index.html
@@ -11,11 +11,100 @@
 		<link rel = "stylesheet" type = "text/css" href = "stylesheet.css">	
 		
 		<script src="https://kit.fontawesome.com/046e45e705.js" crossorigin="anonymous"></script>
+		<link href="https://fonts.googleapis.com/css?family=Prompt|Roboto&display=swap" rel="stylesheet">
 
-		<title>kizuku.github.io</title>
+		<title>Zachary Zhao</title>
 	</head>
 	
 	<body>
+		<nav class = "navbar navbar-expand-lg fixed-top">
+			<h1>ZACHARY ZHAO</h1> 
+		</nav>
+
+		<div id = "home">
+			<div class = "intro">
+				<h1>Zachary Zhao</h1>
+				<h2>Software Developer</h2>
+				<!-- Idea: dropdown menu for h4 -- "I am _____"-->
+			</div c>
+			<h5>I work on web apps and other projects in Los Angeles, California.</h5>
+			<a href = "mailto:zachary.m.zhao@gmail.com">Contact Me</a>
+		</div>
+
+		<div id = "about">
+			<h2>About Me</h2>
+			<p>
+				My name is Zachary Zhao, and I'm currently a 3rd year computer science major at UCLA. I've worked on web apps and am currently working to 
+				expand into new project areas like predictive models combined with data mining and AI.
+			</p>
+			<p>
+				On top of being a software developer, I'm also a tennis player, violinist, and esports enthusiast, and I'm interested in robotics as well.
+			</p>
+			<p>
+				Some of the things I have experience working with include:
+			</p>
+			<ul>
+				<li>HTML and CSS</li>
+				<li>NodeJS</li>
+				<li>VueJS</li>
+				<li>C++</li>
+				<li>Python</li>
+				<li>TensorFlow and Keras</li>
+			</ul>
+		</div>
+
+		<div id = "work">
+			<h2>Project Portfolio</h2>
+		</div>
+
+		<footer>
+			<div class = "container">
+				<div class = "row">
+					<div class = "col-md">
+						<h5>Zachary Zhao</h5>
+						<p>developer | esports enthusiast </p>
+					</div>
+					<div class = "col-md">
+						<h5>Contact Me</h5>
+						<ul>
+							<li>
+								<a href = "Master Resume.pdf">
+									<i class = "far fa-file"></i>
+									Resume
+								</a> 
+							</li>
+							<li>
+								<a href = "https://github.com/kizuku">
+									<i class = "fab fa-github"></i>
+									Github
+								</a>
+							</li>
+							<li>
+								<a href = "mailto:zachary.m.zhao@gmail.com">
+									<i class = "far fa-envelope"></i>
+									Email
+								</a>
+							</li>
+							<li>
+								<a href = "https://twitch.tv/kizuku">
+									<i class = "fab fa-twitch"></i>
+									Stream
+								</a>
+							</li>
+							<li>
+								<a href = "https://twitter.com/Kizukulol">
+									<i class = "fab fa-twitter"></i>
+									Twitter
+								</a>
+							</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+		</footer>
+
+		<!-- nav bar currently disabled due to no need for multiple pages -->
+		<!--
 		<nav class = "navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
 			<div class = "collapse navbar-collapse">
 				<ul class = "navbar-nav mr-auto">
@@ -31,11 +120,10 @@
 
 		<div class = "row" id = "banner">
 			<div class = "image text-center">
-				<img src = "images/background.jpg" alt = "background image" class = "img-fluid">
+				<img src = "images/background1.jpg" alt = "background image" class = "img-fluid">
 				<div class = "caption">
 					<h1>Zachary Zhao</h1>
 					<h5>Computer Science Undergrad at UCLA</h5>
-					<h5>Esports Athlete and Videogame Streamer</h5>
 					<h5>San Diego | Los Angeles</h5>
 				</div>
 			</div>
@@ -97,6 +185,7 @@
 				</div>
 			</div>
 		</footer>
+	-->	
 
 		<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
