Added work portfolio section and nav links

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
 	<body>
 		<nav class = "navbar navbar-expand-lg fixed-top">
 			<h1>ZACHARY ZHAO</h1> 
+			<ul class = "nav-links">
+				<li><a href = "#about">About</a></li>
+				<li><a href = "#work">Projects</a></li>
+				<li><a href = "Zachary Zhao Resume.pdf">Résumé</a></li>
+			</ul>
 		</nav>
 
 		<div id = "home">
@@ -54,7 +59,78 @@
 		</div>
 
 		<div id = "work">
-			<h2>Project Portfolio</h2>
+			<div class = "inner">
+				<h2>Some Projects I've Worked On</h2>
+				<div class = "row">
+					<div class = "project">
+						<div class = "project-header">
+							<h3>LoL Match Data Tool</h3>
+							<div class = "links">
+								<a href = "https://lol-match-data-grabber.herokuapp.com/"><i class="fas fa-external-link-alt"></i></a>
+								<a href = "https://github.com/kizuku/LoLMatchDataGrabber"><i class = "fab fa-github"></i></a>
+							</div>
+						</div>
+						<p class = "description">
+							In order to make the lives of my team's analysts easier, this tool produces a table of stats for a given match that can be exported to csv and added to spreadsheets.
+						</p>
+						<ul class = "tags">
+							<li>VueJS</li>
+							<li>NodeJS</li>
+							<li>HTML & CSS</li>
+						</ul>
+					</div>
+					<div class = "project">
+						<div class = "project-header">
+							<h3>CRTI</h3>
+							<div class = "links">
+								<a href = "https://github.com/kizuku/CRTI"><i class = "fab fa-github"></i></a>
+							</div>
+						</div>
+						<p class = "description">
+							Improves the efficiency of the code review process for the team that I worked with at Genentech.
+						</p>
+						<div class = "subdiv">
+							<ul class = "tags">
+								<li>AutoIT</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<div class = "row">
+					<div class = "project">
+						<div class = "project-header">
+							<h3>AutoFSC</h3>
+							<div class = "links">
+								<a href = "https://github.com/kizuku/AutoFSC"><i class = "fab fa-github"></i></a>
+							</div>
+						</div>
+						<p class = "description">
+							Automatically generates the documentation required for a long but simple task that slowed down my team at Genentech.
+						</p>
+						<ul class = "tags">
+							<li>AutoIT</li>
+						</ul>
+					</div>
+					<div class = "project">
+						<div class = "project-header">
+							<h3>FRC Scheduler</h3>
+							<div class = "links">
+								<a href = "https://github.com/kizuku/FRCSchedule"><i class = "fab fa-github"></i></a>
+							</div>
+						</div>
+						<p class = "description">
+							Match schedule display for a provided FRC team at a provided competition.
+						</p>
+						<div class = "subdiv">
+							<ul class = "tags">
+								<li>VueJS</li>
+								<li>NodeJS</li>
+								<li>HTML & CSS</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 
 		<footer>
@@ -65,12 +141,12 @@
 						<p>developer | esports enthusiast </p>
 					</div>
 					<div class = "col-md">
-						<h5>Contact Me</h5>
+						<h5>Connect With Me</h5>
 						<ul>
 							<li>
-								<a href = "Master Resume.pdf">
+								<a href = "Zachary Zhao Resume.pdf">
 									<i class = "far fa-file"></i>
-									Resume
+									Résumé
 								</a> 
 							</li>
 							<li>
