Fixed some sizing issues and added SCRUM to tags w/ AutoIT

--- a/index.html
+++ b/index.html
@@ -73,11 +73,13 @@
 						<p class = "description">
 							In order to make the lives of my team's analysts easier, this tool produces a table of stats for a given match that can be exported to csv and added to spreadsheets.
 						</p>
-						<ul class = "tags">
-							<li>VueJS</li>
-							<li>NodeJS</li>
-							<li>HTML & CSS</li>
-						</ul>
+						<div class = "subdiv">
+							<ul class = "tags">
+								<li>VueJS</li>
+								<li>NodeJS</li>
+								<li>HTML & CSS</li>
+							</ul>
+						</div>
 					</div>
 					<div class = "project">
 						<div class = "project-header">
@@ -92,6 +94,7 @@
 						<div class = "subdiv">
 							<ul class = "tags">
 								<li>AutoIT</li>
+								<li>SCRUM</li>
 							</ul>
 						</div>
 					</div>
@@ -107,9 +110,12 @@
 						<p class = "description">
 							Automatically generates the documentation required for a long but simple task that slowed down my team at Genentech.
 						</p>
-						<ul class = "tags">
-							<li>AutoIT</li>
-						</ul>
+						<div class = "subdiv">
+							<ul class = "tags">
+								<li>AutoIT</li>
+								<li>SCRUM</li>
+							</ul>
+						</div>
 					</div>
 					<div class = "project">
 						<div class = "project-header">
